# Calculator

./: .gitignore  CMakeLists.txt  main.cpp
src/: main.cpp  parser.cpp  parser.h
src/classes/: Divide.cpp  Divide.h  HandleVariables.cpp  HandleVariables.h  INode.h  Multiply.cpp  Multiply.h  Subtract.cpp  Subtract.h  Sum.cpp  Sum.h  Value.h
tests/: CMakeLists.txt  CalculatorTest.cpp
